# weights-and-wyverns-client

./: .gitignore  .mcp.json  LICENSE  README.md
.claude/commands/: ww.md  wyvern.md
.github/workflows/: ci.yml  release.yml
client/: Cargo.toml
client/src/: connection.rs  events.rs  main.rs  tools.rs
