[package]
name = "ww-client"
version = "0.1.0"
edition = "2021"
description = "MCP server bridge between Claude Code and the Weights & Wyverns game server"
license = "MIT"
repository = "https://github.com/lanestp/weights-and-wyverns-client"
readme = "../README.md"
keywords = ["mcp", "mud", "game", "ww"]
categories = ["games"]

[[bin]]
name = "wyvern"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mimalloc = "0.1"
rmcp = { version = "0.14", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
url = "2"

[lints.rust]
missing_debug_implementations = "warn"
redundant_imports = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
empty_structs_with_brackets = "warn"
map_err_ignore = "warn"
multiple_crate_versions = { level = "allow", priority = 1 }
undocumented_unsafe_blocks = "warn"
unused_result_ok = "warn"
